# anestesia

./: .gitignore  Cargo.toml  README.md  SECURITY.md  iniciar.cmd  public_key.asc
src/: detector.rs  main.rs  persistence.rs
src/hardening/: mod.rs
